--- a/InstagramClone_mine/HomeTableViewCell.xib
+++ b/InstagramClone_mine/HomeTableViewCell.xib
@@ -4,19 +4,20 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Post" rowHeight="419" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="InstagramClone_mine" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="367" height="419"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Post" rowHeight="558" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="InstagramClone_mine" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="367" height="558"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="367" height="419"/>
+                <rect key="frame" x="0.0" y="0.0" width="367" height="558"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6eO-hS-hGg">
-                        <rect key="frame" x="0.0" y="0.0" width="367" height="417"/>
+                        <rect key="frame" x="0.0" y="0.0" width="367" height="558"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pd3-cD-1JF">
                                 <rect key="frame" x="0.0" y="0.0" width="367" height="367"/>
@@ -48,20 +49,46 @@
                                             <action selector="commentButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="GdC-1q-xJz"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3QT-Bi-efE">
-                                        <rect key="frame" x="72" y="0.0" width="295" height="50"/>
-                                        <gestureRecognizers/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LZF-xc-hDn" userLabel="Share Button">
+                                        <rect key="frame" x="72" y="0.0" width="30" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="4Lw-Y8-LHG"/>
+                                            <constraint firstAttribute="width" constant="30" id="nNN-e5-TVC"/>
+                                        </constraints>
+                                        <state key="normal" image="arrow.turn.up.right" catalog="system"/>
+                                        <connections>
+                                            <action selector="ShareButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="slf-dC-yDh"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ka6-l7-acr">
+                                        <rect key="frame" x="108" y="0.0" width="223" height="50"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5X3-5W-JW3" userLabel="Bookmark Button">
+                                        <rect key="frame" x="337" y="0.0" width="30" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="0qz-hn-FJz"/>
+                                            <constraint firstAttribute="width" constant="30" id="eU9-MY-XDi"/>
+                                        </constraints>
+                                        <state key="normal" image="bookmark" catalog="system"/>
+                                        <connections>
+                                            <action selector="bookmarkButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Pf6-Ig-xBh"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Bfg-SU-MU2"/>
-                                    <constraint firstItem="3QT-Bi-efE" firstAttribute="leading" secondItem="Mm7-VI-rWg" secondAttribute="trailing" constant="6" id="aBW-fk-8I0"/>
-                                    <constraint firstAttribute="trailing" secondItem="3QT-Bi-efE" secondAttribute="trailing" id="aKS-gq-zMw"/>
                                 </constraints>
                             </stackView>
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRW-OD-vhJ">
+                                <rect key="frame" x="0.0" y="417" width="367" height="141"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="vTd-FM-Lm6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <gestureRecognizers/>
                         <constraints>
@@ -80,16 +107,23 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <gestureRecognizers/>
             <connections>
+                <outlet property="bookmarkButton" destination="5X3-5W-JW3" id="VSw-Ze-fT8"/>
                 <outlet property="commentButton" destination="Mm7-VI-rWg" id="9MO-48-xNv"/>
                 <outlet property="likeButton" destination="fvI-7d-pDA" id="CDU-JU-qmr"/>
                 <outlet property="postImage" destination="Pd3-cD-1JF" id="Nfg-gD-KdR"/>
-                <outlet property="postLabel" destination="3QT-Bi-efE" id="eii-D3-bym"/>
+                <outlet property="postLabel" destination="SRW-OD-vhJ" id="Te5-Dq-Ggh"/>
+                <outlet property="textViewHeight" destination="vTd-FM-Lm6" id="Gyf-EM-Fea"/>
             </connections>
-            <point key="canvasLocation" x="187.68115942028987" y="206.58482142857142"/>
+            <point key="canvasLocation" x="183.33333333333334" y="254.46428571428569"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="arrow.turn.up.right" catalog="system" width="128" height="99"/>
+        <image name="bookmark" catalog="system" width="112" height="128"/>
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="message" catalog="system" width="128" height="113"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
