--- a/InstagramClone_mine/HomeTableViewCell.xib
+++ b/InstagramClone_mine/HomeTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,10 +26,10 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="McD-Yw-dgv">
-                                <rect key="frame" x="0.0" y="367" width="367" height="50"/>
+                                <rect key="frame" x="0.0" y="367" width="367" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fvI-7d-pDA">
-                                        <rect key="frame" x="0.0" y="0.0" width="30" height="50"/>
+                                        <rect key="frame" x="5" y="0.0" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="O8J-60-eud"/>
                                         </constraints>
@@ -39,7 +39,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mm7-VI-rWg" customClass="CustomCommentButton" customModule="InstagramClone_mine" customModuleProvider="target">
-                                        <rect key="frame" x="36" y="0.0" width="30" height="50"/>
+                                        <rect key="frame" x="41" y="-20" width="30" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="hYB-wq-dXa"/>
                                             <constraint firstAttribute="height" constant="50" id="wnd-BK-LZi"/>
@@ -50,7 +50,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LZF-xc-hDn" userLabel="Share Button">
-                                        <rect key="frame" x="72" y="0.0" width="30" height="50"/>
+                                        <rect key="frame" x="77" y="-20" width="30" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="4Lw-Y8-LHG"/>
                                             <constraint firstAttribute="width" constant="30" id="nNN-e5-TVC"/>
@@ -61,11 +61,11 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ka6-l7-acr">
-                                        <rect key="frame" x="108" y="0.0" width="223" height="50"/>
+                                        <rect key="frame" x="113" y="0.0" width="213" height="30"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5X3-5W-JW3" userLabel="Bookmark Button">
-                                        <rect key="frame" x="337" y="0.0" width="30" height="50"/>
+                                        <rect key="frame" x="332" y="-20" width="30" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="0qz-hn-FJz"/>
                                             <constraint firstAttribute="width" constant="30" id="eU9-MY-XDi"/>
@@ -77,15 +77,17 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="Bfg-SU-MU2"/>
+                                    <constraint firstAttribute="height" constant="30" id="Bfg-SU-MU2"/>
+                                    <constraint firstItem="fvI-7d-pDA" firstAttribute="leading" secondItem="McD-Yw-dgv" secondAttribute="leading" constant="5" id="M2I-eT-Bfu"/>
+                                    <constraint firstAttribute="trailing" secondItem="5X3-5W-JW3" secondAttribute="trailing" constant="5" id="TfJ-ev-rfW"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRW-OD-vhJ">
-                                <rect key="frame" x="0.0" y="417" width="367" height="141"/>
+                            <label opaque="NO" clipsSubviews="YES" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRW-OD-vhJ">
+                                <rect key="frame" x="10" y="397" width="35.5" height="161"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="vTd-FM-Lm6"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -93,7 +95,9 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="Pd3-cD-1JF" firstAttribute="top" secondItem="6eO-hS-hGg" secondAttribute="top" id="Ia4-bi-JWk"/>
+                            <constraint firstAttribute="trailing" secondItem="SRW-OD-vhJ" secondAttribute="trailing" constant="10" id="U9K-S6-mUf"/>
                             <constraint firstItem="Pd3-cD-1JF" firstAttribute="leading" secondItem="6eO-hS-hGg" secondAttribute="leading" id="sDt-rd-m8X"/>
+                            <constraint firstItem="SRW-OD-vhJ" firstAttribute="leading" secondItem="6eO-hS-hGg" secondAttribute="leading" constant="10" id="w1l-vZ-8NE"/>
                         </constraints>
                     </stackView>
                 </subviews>
