--- a/InstagramClone_mine/Screens/AddScreenVC.xib
+++ b/InstagramClone_mine/Screens/AddScreenVC.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="rKb-D0-y0Y">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="852"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C66-xx-0dx">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
@@ -66,8 +66,9 @@
                             </connections>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ree-ax-P4y">
-                            <rect key="frame" x="0.0" y="770" width="414" height="92"/>
+                            <rect key="frame" x="0.0" y="770" width="414" height="82"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <inset key="contentEdgeInsets" minX="0.0" minY="20" maxX="0.0" maxY="20"/>
                             <state key="normal" title="Post"/>
                             <connections>
                                 <action selector="tappedPost:" destination="-1" eventType="touchUpInside" id="lwd-JH-VOP"/>
@@ -82,7 +83,8 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="rKb-D0-y0Y" secondAttribute="bottom" id="2fY-3O-qva"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="rKb-D0-y0Y" secondAttribute="bottom" constant="10" id="2fY-3O-qva"/>
+                <constraint firstItem="k75-hL-zRc" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="3AG-Lp-yc4"/>
                 <constraint firstItem="rKb-D0-y0Y" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="L3K-U6-zpx"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="rKb-D0-y0Y" secondAttribute="trailing" id="n4Y-ai-N2p"/>
                 <constraint firstItem="rKb-D0-y0Y" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="sRB-vJ-kxC"/>
